--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
 agp = "8.1.0-beta05"
 appcompat = "1.6.1"
-coil = "2.2.2"
+coil = "2.4.0"
 constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
 core-testing = "2.2.0"
@@ -11,7 +11,7 @@ kotlinx-serialization-json = "1.5.0"
 mockk = "1.13.5"
 okhttp = "4.11.0"
 org-jetbrains-kotlin-android = "1.8.10"
-compose-bom = "2023.06.00"
+compose-bom = "2023.06.01"
 core-ktx = "1.10.1"
 core-splashscreen = "1.0.1"
 lifecycle-runtime-ktx = "2.6.1"
@@ -23,12 +23,15 @@ accompanist = "0.30.1"
 dagger = "2.44.2"
 hilt = "1.0.0"
 retrofit = "2.9.0"
-paging = "3.2.0-beta01"
-room = "2.5.1"
+paging = "3.2.0-rc01"
+room = "2.5.2"
 ksp = "1.8.10-1.0.9"
-secp256k1-kmp-jvm = "0.6.4"
-spongycastle = "1.51.0.0"
 url-detector = "0.1.23"
+spongycastle = "1.51.0.0"
+secp256k1-kmp = "0.10.0"
+security-crypto = "1.1.0-alpha06"
+security-app-authenticator = "1.0.0-alpha02"
+security-identity-credential = "1.0.0-alpha03"
 
 [libraries]
 # Core libs
@@ -101,8 +104,14 @@ datastore = { module = "androidx.datastore:datastore", version.ref = "datastore"
 datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastore" }
 
 # Crytpo libs
-secp256k1-kmp-jvm = { module = "fr.acinq.secp256k1:secp256k1-kmp-jvm", version.ref = "secp256k1-kmp-jvm" }
+secp256k1-kmp-jvm = { module = "fr.acinq.secp256k1:secp256k1-kmp-jvm", version.ref = "secp256k1-kmp" }
+secp256k1-kmp-jni-android = { module = "fr.acinq.secp256k1:secp256k1-kmp-jni-android", version.ref = "secp256k1-kmp" }
+secp256k1-kmp-jni-jvm = { module = "fr.acinq.secp256k1:secp256k1-kmp-jni-jvm", version.ref = "secp256k1-kmp" }
 spongycastle-core = { module = "com.madgag.spongycastle:core", version.ref = "spongycastle" }
+
+androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "security-crypto" }
+androidx-security-app-authenticator = { module = "androidx.security:security-app-authenticator", version.ref = "security-app-authenticator" }
+androidx-security-identity-credential = { module = "androidx.security:security-identity-credential", version.ref = "security-identity-credential" }
 
 # Tests libs
 junit = { group = "junit", name = "junit", version.ref = "junit" }
