Implement Settings Home & Keys screen

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ core-testing = "2.2.0"
 datastore = "1.0.0"
 kotest = "5.5.5"
 kotlinx-serialization-json = "1.5.0"
+material-icons = "1.4.3"
 mockk = "1.13.5"
 okhttp = "4.11.0"
 org-jetbrains-kotlin-android = "1.8.10"
@@ -40,6 +41,7 @@ core-splashscreen = { group = "androidx.core", name = "core-splashscreen", versi
 lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycle-runtime-ktx" }
 activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activity-compose" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "appcompat" }
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "material-icons" }
 
 # UI libs
 compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "compose-bom" }
