--- a/.github/workflows/push.yaml
+++ b/.github/workflows/push.yaml
@@ -1,30 +1,53 @@
-name: Push
+name: Test/Build Android
 
 on:
+  pull_request:
+    branches: [main]
   push:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches: [main]
 
 jobs:
   build:
-    name: Build
     runs-on: ubuntu-latest
+    timeout-minutes: 30
+
     steps:
-        - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
-        - run: echo "This job is running on a ${{ runner.os }} server hosted by GitHub!"
-    - uses: actions/checkout@v3
-    - run: echo "The ${{ github.repository }} repository has been cloned."
-    - run: echo "Setting up JDK" 
-    - name: set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: gradle
-    - run: echo "The workflow is now ready to test your code."
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-    - run: echo "Building Debug APK."  
-    - name: Build with Gradle
-      run: ./gradlew build
-    - run: echo "Build status report=${{ job.status }}."
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v1
+        with:
+          java-version: 17
+
+      - name: Cache gradle
+        uses: actions/cache@v1
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
+      - name: Linter (gradle)
+        run: ./gradlew ktlintCheck
+
+      - name: Test (gradle)
+        run: ./gradlew test --no-daemon
+
+      - name: Android Test Report
+        uses: asadmansr/android-test-report-action@v1.2.0
+        if: ${{ always() }} # IMPORTANT: run Android Test Report regardless
+
+      - name: Build APK (gradle)
+        run: ./gradlew assembleDebug --no-daemon
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v2
+        with:
+          name: Debug APK
+          path: app/build/outputs/apk/debug/app-debug.apk
+
+      - name: Upload Test Results
+        uses: actions/upload-artifact@v2
+        with:
+          name: Build Reports
+          path: app/build/reports
