--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,33 +6,35 @@ constraintlayout = "2.1.4"
 constraintlayout-compose = "1.0.1"
 core-testing = "2.2.0"
 datastore = "1.0.0"
-kotest = "5.5.5"
-kotlinx-serialization-json = "1.5.0"
+kotest = "5.6.2"
+kotlinx-serialization-json = "1.5.1"
 material-icons = "1.4.3"
 mockk = "1.13.5"
 okhttp = "4.11.0"
 org-jetbrains-kotlin-android = "1.8.10"
+kotlinx-coroutines="1.7.2"
 compose-bom = "2023.06.01"
 core-ktx = "1.10.1"
 core-splashscreen = "1.0.1"
 lifecycle-runtime-ktx = "2.6.1"
 activity-compose = "1.7.2"
 junit = "4.13.2"
-androidx-test-ext-junit = "1.1.5"
+junit-android-runner = "1.1.5"
 espresso-core = "3.5.1"
 accompanist = "0.30.1"
-dagger = "2.44.2"
+dagger = "2.47"
 hilt = "1.0.0"
 retrofit = "2.9.0"
 paging = "3.2.0-rc01"
 room = "2.5.2"
 ksp = "1.8.10-1.0.9"
 url-detector = "0.1.23"
-spongycastle = "1.51.0.0"
-secp256k1-kmp = "0.10.0"
+spongycastle = "1.58.0.0"
+secp256k1-kmp = "0.10.1"
 security-crypto = "1.1.0-alpha06"
 security-app-authenticator = "1.0.0-alpha02"
 security-identity-credential = "1.0.0-alpha03"
+roboelectric="4.10.3"
 
 [libraries]
 # Core libs
@@ -81,7 +83,7 @@ okhttp-logging-interceptor = { module = "com.squareup.okhttp3:logging-intercepto
 
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 retrofit-converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "retrofit" }
-retrofit-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version = "0.8.0" }
+retrofit-serialization-converter = { module = "com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter", version = "1.0.0" }
 
 url-detector = { module = "io.github.url-detector:url-detector", version.ref = "url-detector" }
 
@@ -117,8 +119,10 @@ androidx-security-identity-credential = { module = "androidx.security:security-i
 
 # Tests libs
 junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidx-test-ext-junit" }
+junit-android-runner = { group = "androidx.test.ext", name = "junit", version.ref = "junit-android-runner" }
+robolectric = { module = "org.robolectric:robolectric", version.ref = "roboelectric" }
 androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "core-testing" }
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines"}
 espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espresso-core" }
 mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 mockk-android = { module = "io.mockk:mockk-android", version.ref = "mockk" }
