--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@ name: Test/Build Android
 
 on:
   pull_request:
-    branches: [main]
+    types: [opened, reopened]
   push:
     branches: [main]
 
