Upgrade to Kotlin 1.9, AGP 8.1.0 and Gradle 8.2.1

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.1.0-rc01"
+agp = "8.1.0"
 appcompat = "1.6.1"
 coil = "2.4.0"
 constraintlayout = "2.1.4"
@@ -11,7 +11,7 @@ kotlinx-serialization-json = "1.5.1"
 material-icons = "1.4.3"
 mockk = "1.13.5"
 okhttp = "4.11.0"
-org-jetbrains-kotlin-android = "1.8.10"
+org-jetbrains-kotlin-android = "1.9.0"
 kotlinx-coroutines="1.7.2"
 compose-bom = "2023.06.01"
 core-ktx = "1.10.1"
@@ -27,7 +27,7 @@ hilt = "1.0.0"
 retrofit = "2.9.0"
 paging = "3.2.0-rc01"
 room = "2.5.2"
-ksp = "1.8.10-1.0.9"
+ksp = "1.9.0-1.0.12"
 url-detector = "0.1.23"
 spongycastle = "1.58.0.0"
 secp256k1-kmp = "0.10.1"
