Upgrade paging library to 3.2.0

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,7 +25,7 @@ accompanist = "0.30.1"
 dagger = "2.47"
 hilt = "1.0.0"
 retrofit = "2.9.0"
-paging = "3.2.0-rc01"
+paging = "3.2.0"
 room = "2.5.2"
 ksp = "1.9.0-1.0.12"
 url-detector = "0.1.23"
