--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -13,6 +13,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+    - name: GitHub Tag Name example
+      run: |
+        echo "Tag name from GITHUB_REF_NAME: $GITHUB_REF_NAME"
+        echo "Tag name from github.ref_name: ${{ github.ref_name }}"
     - name: Set up JDK 17
       uses: actions/setup-java@v3
       with:
@@ -36,7 +40,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@v3
       with:
-        name: test-apk
+        name: test-apk-${{ github.ref_name }}
         path: app/build/outputs/apk/debug/app-debug.apk
 #         path: ${{steps.sign_app.outputs.signedReleaseFile}}
 
@@ -48,15 +52,17 @@ jobs:
    - name: Download APK from build
      uses: actions/download-artifact@v1
      with:
-       name: test-apk
+       name: test-apk-${{ github.ref_name }}
+   - name: Display struct of artifact
+     run: ls -R
    - name: Create Release
      id: create_release
      uses: softprops/action-gh-release@v1
      env:
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
      with:
-       tag_name: v${{ github.event.inputs.version }}
-       name: Release v${{ github.event.inputs.version }}
+       tag_name: ${{ github.ref_name }}
+       name: Release ${{ github.ref_name }}
        draft: false
        prerelease: false
-       files: test-apk/test-apk_${{ github.event.inputs.version }}.apk
+       files: test-apk/app-debug.apk
