--- a/.github/workflows/PR-workflow.yml
+++ b/.github/workflows/PR-workflow.yml
@@ -18,9 +18,4 @@ jobs:
         distribution: 'temurin'
         cache: gradle
     - name: Build apks, or do whatever
-      run: ./gradlew build
-    - name: Upload artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: pr-debug-build-${{ github.ref_name }}
-        path: app/build/outputs/apk/debug/app-debug.apk
+      run: ./gradlew build --no-daemon
