--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -21,8 +21,11 @@ jobs:
         distribution: 'temurin'
         cache: 'gradle'
 
-    - name: Unpack base64 config.properties
+    - name: Unpack Config file
       run:  openssl base64 -d -out config.properties <<< ${{ secrets.CONFIG_PROPERTIES }}
+
+    - name: Unpack Certificate
+      run:  openssl base64 -d -out certificates/primal_alternative_android.jks <<< ${{ secrets.CERT_ALTERNATIVE }}
 
     - name: Build apks
       run: ./gradlew assembleReleaseAlternative --no-daemon
@@ -42,7 +45,8 @@ jobs:
      uses: actions/download-artifact@v1
      with:
        name: ${{ github.ref_name }}
-   # GITHUB_TOKEN is provided in action, you need to add write permissions in action settings
+
+
    - name: Create Release
      id: create_release
      uses: softprops/action-gh-release@v1
@@ -50,7 +54,7 @@ jobs:
        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
      with:
        tag_name: ${{ github.ref_name }}
-       name: Release ${{ github.ref_name }}
+       name: Primal ${{ github.ref_name }}
        draft: true
        prerelease: true
        files: ${{ github.ref_name }}/*apk
