--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -22,10 +22,10 @@ jobs:
         cache: 'gradle'
 
     - name: Unpack Config file
-      run:  openssl base64 -d -out config.properties <<< ${{ secrets.CONFIG_PROPERTIES }}
+      run:  openssl base64 -d -out config.properties <<< "${{ secrets.CONFIG_PROPERTIES }}"
 
     - name: Unpack Certificate
-      run:  openssl base64 -d -out certificates/primal_alternative_android.jks <<< ${{ secrets.CERT_ALTERNATIVE }}
+      run:  openssl base64 -d -out certificates/primal_alternative_android.jks <<< "${{ secrets.CERT_ALTERNATIVE }}"
 
     - name: Build apks
       run: ./gradlew assembleReleaseAlternative --no-daemon
