--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -25,10 +25,7 @@ jobs:
       run:  openssl base64 -d -out config.properties <<< "${{ secrets.CONFIG_PROPERTIES }}"
 
     - name: Unpack Certificates
-      run: |
-        openssl base64 -d -out primal_alternative_android.jks <<< "${{ secrets.CERT_ALTERNATIVE }}"
-        openssl base64 -d -out primal_googlePlay_android.jks <<< "${{ secrets.CERT_PLAYSTORE }}"
-
+      run: openssl base64 -d -out primal_alternative_android.jks <<< "${{ secrets.CERT_ALTERNATIVE }}"
 
     - name: Build apks
       run: ./gradlew assembleReleaseAlternative --no-daemon
