--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -27,8 +27,9 @@ jobs:
     - name: Unpack Certificates
       run: |
         openssl base64 -d -out primal_alternative_android.jks <<< "${{ secrets.CERT_ALTERNATIVE }}"
+        openssl base64 -d -out app/primal_alternative_android.jks <<< "${{ secrets.CERT_ALTERNATIVE }}"
         openssl base64 -d -out primal_googlePlay_android.jks <<< "${{ secrets.CERT_PLAYSTORE }}"
-
+        openssl base64 -d -out app/primal_googlePlay_android.jks <<< "${{ secrets.CERT_PLAYSTORE }}"
 
     - name: Build apks
       run: ./gradlew assembleReleaseAlternative --no-daemon
