--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -59,5 +59,5 @@ jobs:
        name: Primal ${{ github.ref_name }}
        draft: true
        prerelease: true
-       body_path: RELEASE_NOTES.md
+       body_path: ${{ github.workspace }}/RELEASE_NOTES.md
        files: ${{ github.ref_name }}/*apk
