Upload in the same bucket

--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -41,7 +41,7 @@ jobs:
     - name: Upload release notes
       uses: actions/upload-artifact@v3
       with:
-        name: release_notes.md
+        name: ${{ github.ref_name }}
         path: RELEASE_NOTES.md
 
   release:
@@ -49,15 +49,10 @@ jobs:
    needs: build
    runs-on: ubuntu-latest
    steps:
-   - name: Download APK from build
+   - name: Download build files
      uses: actions/download-artifact@v1
      with:
        name: ${{ github.ref_name }}
-
-   - name: Download release notes
-     uses: actions/download-artifact@v1
-     with:
-       name: release_notes.md
 
    - name: Create Release
      id: create_release
@@ -69,5 +64,5 @@ jobs:
        name: Primal ${{ github.ref_name }}
        draft: true
        prerelease: true
-       body_path: ${{ github.workspace }}/release_notes.md
+       body_path: ${{ github.ref_name }}/RELEASE_NOTES.md
        files: ${{ github.ref_name }}/*apk
