--- a/.github/workflows/tag-release.yml
+++ b/.github/workflows/tag-release.yml
@@ -32,24 +32,38 @@ jobs:
     - name: Build apks
       run: ./gradlew assembleReleaseAlternative --no-daemon
 
-    - name: Upload artifacts
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v3
       with:
-        name: ${{ github.ref_name }}
-        path: |
-          app/build/outputs/apk/releaseAlternative/*apk
-          app/build/outputs/mapping/releaseAlternative/mapping.txt
-          RELEASE_NOTES.md
+        name: primal-${{ github.ref_name }}.apk
+        path: app/build/outputs/apk/releaseAlternative/*apk
+
+    - name: Zip R8 mapping file
+      run: zip primal-${{ github.ref_name }}-mapping.zip app/build/outputs/mapping/releaseAlternative/mapping.txt
+
+    - name: Upload R8 mapping file
+      uses: actions/upload-artifact@v3
+      with:
+        name: primal-${{ github.ref_name }}-mapping.zip
+        path: primal-${{ github.ref_name }}-mapping.zip
 
   release:
    name: Create GitHub release
    needs: build
    runs-on: ubuntu-latest
    steps:
-   - name: Download artifacts
+   - name: Checkout code
+     uses: actions/checkout@v3
+
+   - name: Download APK artifact
      uses: actions/download-artifact@v1
      with:
-       name: ${{ github.ref_name }}
+       name: primal-${{ github.ref_name }}.apk
+
+   - name: Download APK artifact
+     uses: actions/download-artifact@v1
+     with:
+       name: primal-${{ github.ref_name }}-mapping.zip
 
    - name: Create Release
      id: create_release
@@ -61,7 +75,7 @@ jobs:
        name: Primal ${{ github.ref_name }}
        draft: true
        prerelease: true
-       body_path: ${{ github.ref_name }}/RELEASE_NOTES.md
+       body_path: RELEASE_NOTES.md
        files: |
-          ${{ github.ref_name }}/*apk
-          ${{ github.ref_name }}/app/build/outputs/mapping/releaseAlternative/mapping.txt
+         primal-${{ github.ref_name }}.apk
+         primal-${{ github.ref_name }}-mapping.zip
